--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,24 @@
 .App {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   text-align: center;
 }
 
-.App-header {
+main {
   background-color: #282c34;
   min-height: 100vh;
+  width: 85vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
+}
+
+nav {
+  height: 100vh;
+  width: 15vw;
+  background-color: azure;
+  box-sizing: border-box;
 }
