--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   display: flex;
   flex-direction: row;
@@ -6,19 +11,118 @@
 }
 
 main {
-  background-color: #282c34;
-  min-height: 100vh;
-  width: 85vw;
+  background-color: #faf9f9;
+  height: 100vh;
+  width: 70vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  color: white;
+  justify-content: flex-start;
+  color: #555b6e;
+  overflow: auto;
+  box-sizing: border-box;
+  padding: 3px;
 }
 
 nav {
   height: 100vh;
-  width: 15vw;
-  background-color: azure;
+  width: 30vw;
+  background-color: #555b6e;
+  color: #faf9f9;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-right: 1px solid #bee3db;
+}
+
+nav * {
+  width: 90%;
+  text-align: left;
+}
+nav p {
+  padding: 5px;
+  border-radius: 3px;
+}
+nav p:hover {
+  cursor: pointer;
+  background-color: #bee3db;
+  color: #555b6e;
+}
+
+.recipe {
+  width: 100%;
+  margin: 5px;
+  border: 1px solid #89b0ae;
+  border-top: 10px solid #89b0ae;
+  border-radius: 3px;
+  box-sizing: border-box;
+  box-shadow: 0 0 3px #bee3db;
+}
+
+section {
+  margin: 3px;
+  text-align: left;
+  box-sizing: border-box;
+}
+.details {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.details img {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  margin: 5px;
+  border-radius: 2px;
+  box-shadow: 0 0 5px #555b6e;
+}
+
+.details > div {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+li {
+  margin: 5px 0px;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+.lists {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.lists section {
+  width: 50%;
+  padding: 10px;
+}
+
+.details span,
+.ingredients span {
+  text-transform: capitalize;
+}
+
+h1 {
+  margin-bottom: 10px;
+  padding: 5px;
+  border-bottom: 2px solid #89b0ae;
+}
+
+h2 {
+  padding-bottom: 5px;
+  border-bottom: 2px solid #89b0ae;
+}
+
+.active {
+  color: #bee3db;
 }
