--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -117,7 +117,10 @@ h1 {
   padding: 5px;
   border-bottom: 2px solid #89b0ae;
 }
-
+.fas {
+  display: inline;
+  margin-left: 10px;
+}
 h2 {
   padding-bottom: 5px;
   border-bottom: 2px solid #89b0ae;
@@ -125,4 +128,37 @@ h2 {
 
 .active {
   color: #bee3db;
+}
+
+@media (max-width: 600px) {
+  .App {
+    flex-direction: column;
+  }
+  nav {
+    width: 100vw;
+    height: fit-content;
+  }
+  main {
+    width: 100vw;
+    height: fit-content;
+  }
+  .details {
+    flex-direction: column-reverse;
+  }
+  .details img {
+    width: 100%;
+    height: 50%;
+    box-sizing: border-box;
+    margin: 0;
+  }
+  .lists {
+    flex-direction: column;
+    align-items: center;
+  }
+  .lists section {
+    width: 90%;
+  }
+  h1:hover {
+    cursor: pointer;
+  }
 }
